Fixed about section width and height on small screens

--- a/css/base.css
+++ b/css/base.css
@@ -423,7 +423,7 @@ body {
   top: 0;
   z-index: 400;
   padding: 1rem 3rem;
-  width: 100vw; }
+  width: 100%; }
   @media (max-width: 1080px) {
     .mobile-banner {
       padding: 1rem; } }
@@ -602,8 +602,8 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #006A72;
   z-index: 600;
   visibility: visible;
@@ -709,7 +709,7 @@ body {
     #about-back-btn {
       top: unset;
       bottom: 3rem;
-      left: 50vw;
+      left: 50%;
       -webkit-transform: translateX(-3.725rem);
       -ms-transform: translateX(-3.725rem);
       transform: translateX(-3.725rem); } }
