--- a/scss/ui.scss
+++ b/scss/ui.scss
@@ -30,7 +30,7 @@ body {
     top: 0;
     z-index: 400;
     padding: 1rem 3rem;
-    width: 100vw;
+    width: 100%;
 
     @include breakpoint(desktop) {
         padding: 1rem;
@@ -244,8 +244,8 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: $primaryCol;
     z-index: 600;
     visibility: visible;
@@ -355,7 +355,7 @@ body {
     @include breakpoint(phablet) {
         top: unset;
         bottom: 3rem;
-        left: 50vw;
+        left: 50%;
         transform: translateX(-3.725rem);
     }
 
